--- a/tutorials/quick_start.ipynb
+++ b/tutorials/quick_start.ipynb
@@ -1582,9 +1582,9 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "matchzoo",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "matchzoo"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1596,7 +1596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   },
   "toc": {
    "nav_menu": {},
